--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,21 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/player_toolbar"
+        android:background="@color/secondary_color"
+        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_height="@dimen/player_toolbar"
+                android:layout_width="match_parent">
+
+        <ImageView
+            android:background="#FF0000"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size"/>
+        <TextView
+            android:paddingLeft="8dp"
+            android:text="Hello World"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </android.support.v7.widget.Toolbar>
 </RelativeLayout>
